// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Full Custom Profiles - Complete File Verification with YAML Parsing > should export an OpenCode host-file bind mount in full custom mode > full-custom-opencode-host-file-zh-CN 1`] = `
"# Hagicode Docker Compose 配置
# 由 Docker Compose 生成器自动生成
# 生成时间: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持：
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # OpenCode 运行时配置
      # 使用统一镜像内置的托管 OpenCode 运行时契约
      # ==================================================
      AI__Providers__Providers__OpenCodeCli__Enabled: "true"
      AI__Providers__Providers__OpenCodeCli__Type: "OpenCodeCli"
      AI__Providers__Providers__OpenCodeCli__ExecutablePath: "opencode"
      AI__OpenCode__Enabled: "true"
      AI__OpenCode__ExecutablePath: "opencode"
      AI__OpenCode__Model: "anthropic/claude-sonnet-4"
      # ==================================================
      # Code Server 部署默认值
      # ==================================================
      # 默认不公开宿主机端口；只有开启宿主机发布后才会导出独立映射
      # 系统级资源继续保存在 hagicode_data:/app/data；save-scoped 运行时状态会持久化到 hagicode_saves:/app/saves/save0/...
      VsCodeServer__DefaultActiveImplementation: "code-server"
      VsCodeServer__CodeServerDefaultHost: "127.0.0.1"
      VsCodeServer__CodeServerDefaultPort: 36529
      VsCodeServer__CodeServerExecutablePath: "code-server"
      VsCodeServer__CodeServerAuthMode: "none"
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      # 系统级数据卷；Code Server 运行时状态会落在 /app/data/code-server
      - hagicode_data:/app/data
      # 存档级数据卷；主数据库与 Orleans 等状态会落在 /app/saves/save0/...
      - hagicode_saves:/app/saves
      - /srv/opencode/opencode.json:/home/hagicode/.config/opencode/opencode.json
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  hagicode_saves:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Full Custom Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for Linux non-root user in SQLite-only mode > full-custom-linux-nonroot-sqlite-zh-CN 1`] = `
"# Hagicode Docker Compose 配置
# 由 Docker Compose 生成器自动生成
# 生成时间: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持：
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      PUID: 1000
      PGID: 1000
      # ==================================================
      # Claude 运行时配置
      # 所有提供商统一使用 ANTHROPIC_AUTH_TOKEN
      # ZAI、阿里云和自定义提供商会额外设置 ANTHROPIC_URL
      # ==================================================
      # Anthropic 官方 API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      # 无需 ANTHROPIC_URL，默认使用 Anthropic 官方端点
      # ==================================================
      # Code Server 部署默认值
      # ==================================================
      # 默认不公开宿主机端口；只有开启宿主机发布后才会导出独立映射
      # 系统级资源继续保存在 hagicode_data:/app/data；save-scoped 运行时状态会持久化到 hagicode_saves:/app/saves/save0/...
      VsCodeServer__DefaultActiveImplementation: "code-server"
      VsCodeServer__CodeServerDefaultHost: "127.0.0.1"
      VsCodeServer__CodeServerDefaultPort: 36529
      VsCodeServer__CodeServerExecutablePath: "code-server"
      VsCodeServer__CodeServerAuthMode: "none"
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      # 系统级数据卷；Code Server 运行时状态会落在 /app/data/code-server
      - hagicode_data:/app/data
      # 存档级数据卷；主数据库与 Orleans 等状态会落在 /app/saves/save0/...
      - hagicode_saves:/app/saves
      - claude-data:/home/hagicode/.claude
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  hagicode_saves:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Full Custom Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for Linux root user in SQLite-only mode > full-custom-linux-root-sqlite-zh-CN 1`] = `
"# Hagicode Docker Compose 配置
# 由 Docker Compose 生成器自动生成
# 生成时间: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持：
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Claude 运行时配置
      # 所有提供商统一使用 ANTHROPIC_AUTH_TOKEN
      # ZAI、阿里云和自定义提供商会额外设置 ANTHROPIC_URL
      # ==================================================
      # Anthropic 官方 API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      # 无需 ANTHROPIC_URL，默认使用 Anthropic 官方端点
      # ==================================================
      # Code Server 部署默认值
      # ==================================================
      # 默认不公开宿主机端口；只有开启宿主机发布后才会导出独立映射
      # 系统级资源继续保存在 hagicode_data:/app/data；save-scoped 运行时状态会持久化到 hagicode_saves:/app/saves/save0/...
      VsCodeServer__DefaultActiveImplementation: "code-server"
      VsCodeServer__CodeServerDefaultHost: "127.0.0.1"
      VsCodeServer__CodeServerDefaultPort: 36529
      VsCodeServer__CodeServerExecutablePath: "code-server"
      VsCodeServer__CodeServerAuthMode: "none"
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      # 系统级数据卷；Code Server 运行时状态会落在 /app/data/code-server
      - hagicode_data:/app/data
      # 存档级数据卷；主数据库与 Orleans 等状态会落在 /app/saves/save0/...
      - hagicode_saves:/app/saves
      - claude-data:/home/hagicode/.claude
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  hagicode_saves:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Full Custom Profiles - Complete File Verification with YAML Parsing > should generate valid YAML structure for Windows deployment in SQLite-only mode > full-custom-windows-sqlite-zh-CN 1`] = `
"# Hagicode Docker Compose 配置
# 由 Docker Compose 生成器自动生成
# 生成时间: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持：
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Claude 运行时配置
      # 所有提供商统一使用 ANTHROPIC_AUTH_TOKEN
      # ZAI、阿里云和自定义提供商会额外设置 ANTHROPIC_URL
      # ==================================================
      # Anthropic 官方 API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      # 无需 ANTHROPIC_URL，默认使用 Anthropic 官方端点
      # ==================================================
      # Code Server 部署默认值
      # ==================================================
      # 默认不公开宿主机端口；只有开启宿主机发布后才会导出独立映射
      # 系统级资源继续保存在 hagicode_data:/app/data；save-scoped 运行时状态会持久化到 hagicode_saves:/app/saves/save0/...
      VsCodeServer__DefaultActiveImplementation: "code-server"
      VsCodeServer__CodeServerDefaultHost: "127.0.0.1"
      VsCodeServer__CodeServerDefaultPort: 36529
      VsCodeServer__CodeServerExecutablePath: "code-server"
      VsCodeServer__CodeServerAuthMode: "none"
    ports:
      - "8080:45000"
    volumes:
      - C:\\\\repos:/app/workdir
      # 系统级数据卷；Code Server 运行时状态会落在 /app/data/code-server
      - hagicode_data:/app/data
      # 存档级数据卷；主数据库与 Orleans 等状态会落在 /app/saves/save0/...
      - hagicode_saves:/app/saves
      - claude-data:/home/hagicode/.claude
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  hagicode_saves:
  claude-data:

networks:
  pcode-network:
    driver: bridge"
`;

exports[`Full Custom Profiles - Complete File Verification with YAML Parsing > should keep the database contract free of postgres services, env vars, and named volumes > full-custom-no-postgres-artifacts-zh-CN 1`] = `
"# Hagicode Docker Compose 配置
# 由 Docker Compose 生成器自动生成
# 生成时间: 2024/1/1 00:00:00

# ==================================================
# 支持信息
# ==================================================
# 如果您遇到任何问题或需要技术支持：
# - 加入我们的 QQ 群: 610394020
# - 加入我们的 Discord 社区: https://discord.gg/qY662sJK
# - 我们提供实时协助和解决方案
# - 分享您的经验并与其他用户交流

services:
  hagicode:
    image: newbe36524/hagicode:0
    container_name: hagicode
    environment:
      ASPNETCORE_ENVIRONMENT: Production
      ASPNETCORE_URLS: http://+:45000
      TZ: Asia/Shanghai
      Database__Provider: sqlite
      ConnectionStrings__Default: "Data Source=/app/data/hagicode.db"
      License__Activation__LicenseKey: "public-license-key"
      # ==================================================
      # Codex 运行时配置
      # 使用 CODEX_* 环境变量
      # OPENAI_* 变量可作为兼容别名
      # ==================================================
      CODEX_API_KEY: "test-codex-key"
      # OPENAI_* 变量可作为兼容别名: OPENAI_API_KEY = CODEX_API_KEY
      # CODEX_BASE_URL：可选，未设置时使用默认值
      # OPENAI_* 变量可作为兼容别名: OPENAI_BASE_URL = CODEX_BASE_URL
      # ==================================================
      # Claude 运行时配置
      # 所有提供商统一使用 ANTHROPIC_AUTH_TOKEN
      # ZAI、阿里云和自定义提供商会额外设置 ANTHROPIC_URL
      # ==================================================
      # Anthropic 官方 API
      ANTHROPIC_AUTH_TOKEN: "test-token"
      # 无需 ANTHROPIC_URL，默认使用 Anthropic 官方端点
      # ==================================================
      # Code Server 部署默认值
      # ==================================================
      # 默认不公开宿主机端口；只有开启宿主机发布后才会导出独立映射
      # 系统级资源继续保存在 hagicode_data:/app/data；save-scoped 运行时状态会持久化到 hagicode_saves:/app/saves/save0/...
      VsCodeServer__DefaultActiveImplementation: "code-server"
      VsCodeServer__CodeServerDefaultHost: "127.0.0.1"
      VsCodeServer__CodeServerDefaultPort: 36529
      VsCodeServer__CodeServerExecutablePath: "code-server"
      VsCodeServer__CodeServerAuthMode: "none"
    ports:
      - "8080:45000"
    volumes:
      - /home/user/repos:/app/workdir
      # 系统级数据卷；Code Server 运行时状态会落在 /app/data/code-server
      - hagicode_data:/app/data
      # 存档级数据卷；主数据库与 Orleans 等状态会落在 /app/saves/save0/...
      - hagicode_saves:/app/saves
      - claude-data:/home/hagicode/.claude
      - codex-data:/home/hagicode/.codex
    networks:
      - pcode-network
    restart: unless-stopped

volumes:
  hagicode_data:
  hagicode_saves:
  claude-data:
  codex-data:

networks:
  pcode-network:
    driver: bridge"
`;
